das/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: das
spec:
  replicas: 1
  selector:
    matchLabels:
      app: das
  template:
    metadata:
      labels:
        app: das
    spec:
      containers:
        - name: das
          image: quay.io/operate-first/das:v0.2.0
          ports:
            - containerPort: 5555
              name: web
          command:
            - "./das/das-exec"
          args:
            - "--client-id"
            - "$(CLIENT_ID)"
            - "--client-secret"
            - "$(CLIENT_SECRET)"
            - "--issuer"
            - "$(ISSUER_URL)"
            - "--listen"
            - "$(LISTEN_ADDRESS)"
            - "--redirect-uri"
            - "$(REDIRECT_URI)"
            - "--scopes"
            - "$(SCOPES)"
          resources:
            limits:
              cpu: 1
              memory: 2Gi
            requests:
              cpu: 512m
              memory: 500Mi
